--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    return "
+    "    pass"
    ]
   },
   {
@@ -197,6 +197,7 @@
    "outputs": [],
    "source": [
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
+    "\n",
     "output_at(three_x_squared_minus_eleven, 2) # 1 \n",
     "output_at(three_x_squared_minus_eleven, 3) # 16"
    ]
