--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -192,25 +192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
-    "three_x_squared_minus_eleven[0][1]\n",
-    "#output_at(three_x_squared_minus_eleven, 2) # 1 \n",
-    "#output_at(three_x_squared_minus_eleven, 3) # 16"
+    "\n",
+    "output_at(three_x_squared_minus_eleven, 2) # 1 \n",
+    "output_at(three_x_squared_minus_eleven, 3) # 16"
    ]
   },
   {
