--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -187,29 +187,28 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    lot = list_of_terms\n",
-    "    return lot[0][0]*x_value**lot[0][1]+lot[]"
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-11"
+       "3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
-    "\n",
+    "three_x_squared_minus_eleven[0][1]\n",
     "#output_at(three_x_squared_minus_eleven, 2) # 1 \n",
     "#output_at(three_x_squared_minus_eleven, 3) # 16"
    ]
