Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -561,10 +561,7 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    lot= list_of_terms\n",
-    "    x = x_value\n",
-    "    dx= delta_x\n",
-    "    return lot[0][0]*x**lot[0][1]+lot[1][1]"
+    "    return "
    ]
   },
   {
