--- a/index.ipynb
+++ b/index.ipynb
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,14 +564,25 @@
     "    lot= list_of_terms\n",
     "    x = x_value\n",
     "    dx= delta_x\n",
-    "    return lot[0][0]*x**lot[0][1]+lot[1][1]"
+    "    return lot[0][0]*(x+dx)**lot[0][1]+lot[1][0]*(x+dx)**lot[1][1] - lot[0][0]*x**lot[0][1]+lot[1][0]*x**lot[1][1] \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "delta_f(four_x_plus_fifteen, 2, 1) # 4"
    ]
