Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,21 +564,21 @@
     "    lot= list_of_terms\n",
     "    x = x_value\n",
     "    dx= delta_x\n",
-    "    return (lot[0][0]*(x+dx)**lot[0][1]+lot[1][0]*(x+dx)**lot[1][1]) - (lot[0][0]*x**lot[0][1]+lot[1][0]*x**lot[1][1]) \n"
+    "    return lot[0][0]*(x+dx)**lot[0][1]+lot[1][0]*(x+dx)**lot[1][1] - lot[0][0]*x**lot[0][1]+lot[1][0]*x**lot[1][1] \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "34"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
